--- a/SettingsUI/SettingsUI.csproj
+++ b/SettingsUI/SettingsUI.csproj
@@ -92,6 +92,7 @@
   <ItemGroup>
     <Compile Include="Mod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Slider.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
